<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.americanquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/home" />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:src="@drawable/ic_question_answer_white_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_icon"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/main_header_text"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/main_button_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_main"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/main_bottom_text"
        android:textColor="@android:color/white"
        android:textSize="24sp" />
</RelativeLayout>
